--- a/report/report.tex
+++ b/report/report.tex
@@ -79,7 +79,7 @@ rich set of attributes, including position, size, object class, and confidence.
 \textsc{openCV}. We also established the logical connections between directed
 edges and flowchart elements.
 \item Text elements were identified and converted to actual text using
-Google's \textsc{tesseract OCR} engine.
+Google's \textsc{tesseract-ocr} engine.
 \item We then follow the logical order of arrows to render the flowchart
 elements in order.
 \item Finally, to demonstrate  using \textsc{SchemaDraw} as the drawing application.
@@ -91,7 +91,8 @@ Google Colab (faster \textsc{GPU}-based training,
 \end{itemize}
 
 
-We have successfully implemented a \textsc{yolo-v4} based program to
+In conclusion,
+we have successfully implemented a \textsc{yolo-v4} based program to
 recognize hand-drawn flowcharts, and demonstrated the effectiveness of our
 method.
 
