--- a/report/report.tex
+++ b/report/report.tex
@@ -21,7 +21,7 @@
 \thispagestyle{empty}
 
 \vspace{-2em}
-\title{\textsc{CMPE-258} Executive Summary: Hand-drawn Flowchart Recognition}
+\title{\huge \textsc{cmpe-258}: Hand-drawn Flowchart Recognition}
 \date{}
 
 \vspace{-2em}
@@ -34,67 +34,90 @@
 
 \begin{figure}[h]
 \centering
-\begin{subfigure}{0.28\columnwidth}
+\begin{subfigure}{0.30\columnwidth}
 \includegraphics[width=\columnwidth]{sample.png}
 \end{subfigure}
-\begin{subfigure}{0.28\columnwidth}
+\begin{subfigure}{0.30\columnwidth}
 \includegraphics[width=\columnwidth]{sample.png}
 \end{subfigure}
-\begin{subfigure}{0.28\columnwidth}
+\begin{subfigure}{0.30\columnwidth}
 \includegraphics[width=\columnwidth]{sample.png}
 \end{subfigure}
 \end{figure}
 
-In this project, we developed a program to recognize hand-drawn flowcharts.
-and render them in productivity applications including word processors
-and presentation softwares.
+Flowcharts are incredibly versatile and flexible tools, often the most
+succinct way to summarize or visualize concepts such as workflow and
+relationships.
+While all productivity softwares support the creation of flowcharts through
+drawing primatives such as circles, blocks, and arrows, the creation
+process is often awkward and unwieldy.  Many people avoid flowcharts due to such
+difficulty, as well as the inevitable discrepancy between what was intended and how it
+turns out. As such, 
+the objective of our project is to apply deep-learning techniques to develop a
+hand-drawn flowchart recognition system
+that accurately translates user's intent to actual rendering of flowcharts in
+productivity applications.
 
-Many softwares support the creation of flowcharts through providing
-drawing primatives such as circles, blocks, and arrows,
-they are often awkward to use. Many people avoid flowcharts due to such
-difficulty, despite flowcharts are versatile and are often the best and most
-succinct waay to summarize concepts such as workflow
-and relationships. We sought to offer a solution to this problem.
-
-We developed a deep learning model that takes take an image
-of a flowchart, and extract the blocks, text, arrows, and their relative
-positioning.
-Thereafter, the flowchart can be recreated in graphical applications.
-Our approach was built on \textsc{yolo-v4}
-trained on objects specific to flowchart
-detection, including blocks (processes), parallelograms (data),
-diamonds (decisions), circles (I/O), arrows, and lines.
-We also extract text elements and converted to text using Tesseract
-\textsc{ocr}. The following are technical details of our implementation.
+The key ingredient of our flowchart recognition system is the
+\textsc{yolo-v4} engine custom trained to detect flowchart objects.
+We then analyze these elements and extract connectivity and
+symbolic relationships between them, and perform \textsc{ocr} to convert
+handwritings to actual English words. The result is a symbolic flowchart that fully
+captures the positional, relational, and textual intents, which we can then render
+in a variety of dfferent ways.
+In the following, we describe our algorithm in more technical details.
 
 \begin{itemize}
-\item Our \textsc{yolo} was trained on a dataset with 600 annotated flowchart
-images, with custom \textsc{xml} preprocessing.
-\item Our model was trained to detect seven custom classes (\texttt{text}, \texttt{arrow}, \texttt{data}, \texttt{decision}, \texttt{process}, \texttt{terminator}, and \texttt{connection}), starting with
-pre-trained \textsc{yolo} weights. Training took a total of six hours with
-\textsc{GPU}, achieving an \textsc{mAP} of $90.365\%$.
-\item During post-processing, we compile a list of detected objects with a
-rich set of attributes, including position, size, object class, and confidence.
-\item We implemented a custom algorithm to detect arrow direction, using
-\textsc{openCV}. We also established the logical connections between directed
-edges and flowchart elements.
-\item Text elements were identified and converted to actual text using
+
+\item Our model is a custom \textsc{yolo-v4} deep neural network
+trained to detect seven custom classes, each corresponding to
+a key flowchart concept: \texttt{text}, \texttt{arrow},
+\texttt{data} (parallelograms), \texttt{decision} (diamonds), \texttt{process} (straight
+or rounded rectangles), \texttt{terminator}, and \texttt{connection} (input/output).
+
+\item We used a training dataset with $600+$ high-quality annotated flowchart
+images, with custom scripts to proprocess \textsc{xml}.
+The training was done on Google Colab with \textsc{gpu}, taking $6+$ hours
+starting with pre-trained \textsc{yolo} weights.
+Our model achieved $90\%+$ mAP, with $96\%+$ accuracy on
+all flowchart elements except arrows and texts.
+
+\item We wrote post-processing code to collect the list of detected objects with a
+rich set of positional and logical attributes.
+Hand-writings are identified and converted to actual text using
 Google's \textsc{tesseract-ocr} engine.
-\item We then follow the logical order of arrows to render the flowchart
-elements in order.
-\item Finally, to demonstrate  using \textsc{SchemaDraw} as the drawing application.
-\item We utilized the following tools in the project: \textsc{python 3},
-\textsc{openCV 2}, \textsc{Pytorch 2.0}, scripts from PyLessons,
-Google Colab (faster \textsc{GPU}-based training,
+
+\item We wrote a highly accurate custom algorithm to detect arrow direction
+using \textsc{openCV}, which allows us to establish the full logical relationship
+between flowchart elements. Together with the shapes and text elements, we now
+have a full symbol representation of the flowchart.
+
+\item For demonstration purpose,
+we recreate the flowchart in \textsc{schemDraw} as intended by
+the user, doing so by following the logical order of arrows.
+Our project can be easily extended to
+output many other formats including \textsc{svg}, various Python drawing
+formats (e.g.~Turtle and iPyCanvas), Asymptote for \LaTeX, Graphviz, and so on.
+
+\item All in all, we utilized the following tools in the project: Python 3.8,
+\textsc{openCV} 2.0, Pytorch 2.0, \textsc{yolo} scripts from PyLessons,
+Google Colab (for fast \textsc{gpu}-based training),
 \textsc{yolo-v4}, Google \textsc{tesseract}, and
-\textsc{schemaDraw}.
+\textsc{schemDraw}.
 \end{itemize}
 
+%\begin{center}
+%\rule{0.5\textwidth}{0.05pt}
+%\end{center}
 
-In conclusion,
-we have successfully implemented a \textsc{yolo-v4} based program to
-recognize hand-drawn flowcharts, and demonstrated the effectiveness of our
-method.
+%In conclusion,
+%we have successfully implemented a \textsc{yolo-v4} based program to
+%recognize hand-drawn flowcharts, and demonstrated the effectiveness of our
+%method.
+%The following summarizes our individual contributions
+%(\textsc{C} = coding, \textsc{TV} =
+%testing and verification,
+%\textsc{P} = PPT, \textsc{ES} = executive summary. $\star$ Project Coordinator).
 
 % \subsection*{Contributions}
 
@@ -102,19 +125,19 @@ method.
 \centering
 \begin{tabular}{|c|c|c|c|c|c|c|c|}
 \hline
-Name & Major \& ID & Main Responsibility & \textsc{C} &
+Name & Major, SJSU ID & Main Responsibility & \textsc{C} &
 	\textsc{T\&V} & \textsc{P} & \textsc{ES} & Overall \\
 \hline
-Mu Chen & SE, 014725425 & R\&D, \textsc{yolo}, \textsc{schemaDraw} & $40\%$ & $40\%$ & $10\%$ & $10\%$ & $25\%$ \\
-Roger Kuo & SE, 013784706 & R\&D, \textsc{yolo}, arrow detection & $40\%$ & $40\%$ & $10\%$ & $10\%$ & $25\%$ \\
+Mu Chen & SE, 014725425 & R\&D, \textsc{yolo}, \textsc{schemDraw} & $40\%$ & $40\%$ & $10\%$ & $10\%$ & $25\%$ \\
+Roger Kuo & SE, 013784706 & R\&D, \textsc{yolo}, Arrow Detection & $40\%$ & $40\%$ & $10\%$ & $10\%$ & $25\%$ \\
 Hardy Leung${}^\star$ & AI, 016711877 &
 Proposal, Summary, Coordinator & $10\%$ & $10\%$ & $10\%$ & $70\%$ & $25\%$ \\
-Jasmine Wang & AI, 002805362 & testing, presentation & $10\%$ & $10\%$ & $70\%$ & $10\%$ & $25\%$ \\ \hline
+Jasmine Wang & AI, 002805362 & Testing, Presentation & $10\%$ & $10\%$ & $70\%$ & $10\%$ & $25\%$ \\ \hline
 \end{tabular}
+%The following summarizes our individual contributions
 \caption{\textsc{C} = coding, \textsc{TV} =
 testing and verification,
-\textsc{P} = PPT, \textsc{ES} = executive summary. $\star$ Project Coordinator.
-}
+\textsc{P} = PPT, \textsc{ES} = executive summary. $\star$ Project Coordinator}
 \end{table}
 
 % \bibliographystyle{acm}
