--- a/report/report.tex
+++ b/report/report.tex
@@ -64,7 +64,7 @@ We then analyze these elements and extract connectivity and
 symbolic relationships between them, and perform \textsc{ocr} to convert
 handwritings to actual English words. The result is a symbolic flowchart that fully
 captures the positional, relational, and textual intents, which we can then render
-in a variety of dfferent ways.
+in a variety of different ways.
 In the following, we describe our algorithm in more technical details.
 
 \begin{itemize}
@@ -84,7 +84,7 @@ all flowchart elements except arrows and texts.
 
 \item We wrote post-processing code to collect the list of detected objects with a
 rich set of positional and logical attributes.
-Hand-writings are identified and converted to actual text using
+Handwritings are identified and converted to actual text using
 Google's \textsc{tesseract-ocr} engine.
 
 \item We wrote a highly accurate custom algorithm to detect arrow direction
