--- a/report/report.tex
+++ b/report/report.tex
@@ -34,14 +34,14 @@
 
 \begin{figure}[h]
 \centering
-\begin{subfigure}{0.30\columnwidth}
-\includegraphics[width=\columnwidth]{sample.png}
+\begin{subfigure}{0.32\columnwidth}
+\includegraphics[width=\columnwidth]{fc_01.jpeg}
 \end{subfigure}
-\begin{subfigure}{0.30\columnwidth}
-\includegraphics[width=\columnwidth]{sample.png}
+\begin{subfigure}{0.32\columnwidth}
+\includegraphics[width=\columnwidth]{fc_02.jpeg}
 \end{subfigure}
-\begin{subfigure}{0.30\columnwidth}
-\includegraphics[width=\columnwidth]{sample.png}
+\begin{subfigure}{0.32\columnwidth}
+\includegraphics[width=\columnwidth]{fc_03.jpeg}
 \end{subfigure}
 \end{figure}
 
