--- a/report/report.tex
+++ b/report/report.tex
@@ -49,7 +49,7 @@ Flowcharts are incredibly versatile and flexible tools, often the most
 succinct way to summarize or visualize concepts such as workflow and
 relationships.
 While all productivity softwares support the creation of flowcharts through
-drawing primatives such as circles, blocks, and arrows, the creation
+drawing primitives such as circles, blocks, and arrows, the creation
 process is often awkward and unwieldy.  Many people avoid flowcharts due to such
 difficulty, as well as the inevitable discrepancy between what was intended and how it
 turns out. As such, 
