--- a/report/report.tex
+++ b/report/report.tex
@@ -128,11 +128,11 @@ Google Colab (for fast \textsc{gpu}-based training),
 Name & Major, SJSU ID & Main Responsibility & \textsc{C} &
 	\textsc{T\&V} & \textsc{P} & \textsc{ES} & Overall \\
 \hline
-Mu Chen & SE, 014725425 & R\&D, \textsc{yolo}, \textsc{schemDraw} & $40\%$ & $40\%$ & $10\%$ & $10\%$ & $25\%$ \\
-Roger Kuo & SE, 013784706 & R\&D, \textsc{yolo}, Arrow Detection & $40\%$ & $40\%$ & $10\%$ & $10\%$ & $25\%$ \\
+Mu Chen & SE, 014725425 & R\&D, \textsc{yolo}, \textsc{schemDraw} & \textsc{tbd} & \textsc{tbd} & \textsc{tbd} & \textsc{tbd} & \textsc{tbd} \\
+Roger Kuo & SE, 013784706 & R\&D, \textsc{yolo}, Arrow Detection & \textsc{tbd} & \textsc{tbd} & \textsc{tbd} & \textsc{tbd} & \textsc{tbd} \\
 Hardy Leung${}^\star$ & AI, 016711877 &
-Proposal, Summary, Coordination & $10\%$ & $10\%$ & $10\%$ & $70\%$ & $25\%$ \\
-Jasmine Wang & AI, 002805362 & Testing, Presentation & $10\%$ & $10\%$ & $70\%$ & $10\%$ & $25\%$ \\ \hline
+Proposal, Summary, Coordination & \textsc{tbd} & \textsc{tbd} & \textsc{tbd} & \textsc{tbd} & \textsc{tbd} \\
+Jasmine Wang & AI, 002805362 & Testing, Presentation & \textsc{tbd} & \textsc{tbd} & \textsc{tbd} & \textsc{tbd} & \textsc{tbd} \\ \hline
 \end{tabular}
 %The following summarizes our individual contributions
 \caption{\textsc{C} = coding, \textsc{TV} =
