--- a/report/report.tex
+++ b/report/report.tex
@@ -125,8 +125,8 @@ That said, we do acknowledge multiple areas of
 improvement: (1) we would certainly benefit from more diverse and
 high-quality training sets from multiple sources,
 (2) high mAP on block elements was undone by relatively
-low text and arrow detection in \textsc{yolo},
-(3) the arrowhead detection was difficult, and prone to failure in noisy
+low text and arrow detection accuracy in \textsc{yolo},
+(3) arrowhead detection was difficult, and prone to failure in noisy
 or busy environment, (4)
 Google's \textsc{tesseract} was surprisingly inaccurate, (5) we were
 severely limited by the inflexibility of \textsc{schemdraw}, and could have
