Minor. Update to contribution matrix per consensus of the three primary stakeholders.

--- a/report/report.tex
+++ b/report/report.tex
@@ -153,16 +153,16 @@ chosen a more robust alternative.
 Name & Major, SJSU ID & Main Responsibility & \textsc{C} &
 	\textsc{T\&V} & \textsc{P} & \textsc{ES} & Overall \\
 \hline
-Mu Chen & SE, 014725425 & R\&D, \textsc{yolo}, \textsc{schemdraw} & \textsc{tbd} & \textsc{tbd} & \textsc{tbd} & \textsc{tbd} & \textsc{tbd} \\
-Roger Kuo & SE, 013784706 & R\&D, \textsc{yolo}, Arrow Detection & \textsc{tbd} & \textsc{tbd} & \textsc{tbd} & \textsc{tbd} & \textsc{tbd} \\
+Mu Chen & SE, 014725425 & R\&D, \textsc{yolo}, \textsc{schemdraw} & \textsc{54} & \textsc{49} & \textsc{18} & \textsc{9} & \textsc{32} \\
+Roger Kuo & SE, 013784706 & R\&D, \textsc{yolo}, Arrow Detection & \textsc{42} & \textsc{43} & \textsc{36} & \textsc{5} & \textsc{32} \\
 Hardy Leung${}^\star$ & AI, 016711877 &
-Proposal, Summary, Coordination & \textsc{tbd} & \textsc{tbd} & \textsc{tbd} & \textsc{tbd} & \textsc{tbd} \\
-Jasmine Wang & AI, 002805362 & Testing, Presentation & \textsc{tbd} & \textsc{tbd} & \textsc{tbd} & \textsc{tbd} & \textsc{tbd} \\ \hline
+Proposal, Summary, Coordination & \textsc{4} & \textsc{5} & \textsc{32} & \textsc{84} & \textsc{31} \\
+Jasmine Wang & AI, 002805362 & Testing, Presentation & \textsc{0} & \textsc{3} & \textsc{14} & \textsc{2} & \textsc{5} \\ \hline
 \end{tabular}
 %The following summarizes our individual contributions
 \caption{\textsc{C} = coding, \textsc{TV} =
 testing and verification,
-\textsc{P} = PPT, \textsc{ES} = executive summary. $\star$ Project Coordinator}
+\textsc{P} = PPT, \textsc{ES} = proposal + executive summary. $\star$ Coordinator}
 \end{table}
 
 % \bibliographystyle{acm}
